--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,6 +36,6 @@ jobs:
           fetch-depth: '0'
       - name: Generate changelog
         id: get_changelog
-        uses: massicer/basic-changelog-generator@1.0.0
+        uses: ./ #massicer/basic-changelog-generator@1.0.0
       - name: Print the changelog
         run: echo "${{ steps.get_changelog.outputs.changelog }}"
