--- a/action.yaml
+++ b/action.yaml
@@ -13,9 +13,9 @@ runs:
       with:
         python-version: '3.10'  
     - name: Install Dependencies
-      run: pip install -r requirements.txt
+      run:  pip install -r ${{ github.action_path }}/requirements.txt
       shell: bash
     - name: Generate the changelog
       id: generate_changelog
-      run: python main.py
+      run: python ${{ github.action_path }}/main.py
       shell: bash
